hw/client/public/style/main.css
@import url(https://fonts.googleapis.com/css?family=Rubik);
@import url(https://fonts.googleapis.com/css?family=Roboto);
html,
body, h1,
h2,
h3,
h4,
h5,
h6,
p,
img,
div {
  margin: 0;
  padding: 0; }

html,
body {
  font-family: "Roboto", sans-serif;
  font-size: 16px;
  width: 100%;
  height: 100%;
  background-color: #131103; }

body {
  width: 100%;
  height: 100%; }

* {
  text-decoration: none; }

#root {
  width: 100%;
  min-height: 100%;
  padding-bottom: 6rem; }

.fade-in-start {
  opacity: 0; }

.autocomplete {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  padding-top: 5rem;
  padding-bottom: 5rem; }

.autocomplete-items-bordered {
  border: 1px solid #ecebeb; }

.autocomplete-items {
  position: absolute;
  height: 0;
  z-index: 10;
  overflow: hidden;
  top: 62.5%;
  left: 0;
  right: 0;
  opacity: 0; }
  .autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    color: #ecebeb;
    background: #131103;
    padding: 1.75rem;
    transition: all 0.25s ease-in; }
    .autocomplete-items div:nth-child(odd) {
      background-color: #202020; }
    .autocomplete-items div:hover {
      transition: all 0.25s ease-out;
      background-color: #f7e601;
      color: #131103; }

.header {
  display: flex;
  width: 100%;
  background-color: #f7e601;
  align-content: center;
  justify-content: center; }

.page-title {
  font-size: 5rem;
  padding: 2.25rem;
  color: #131103; }

.input {
  border: 1px solid #ecebeb;
  background: #131103;
  color: #ecebeb;
  font-size: 1.35rem;
  padding: 1rem;
  min-width: 700px;
  min-height: 2rem;
  border-radius: 6px;
  text-align: center; }

#main-view {
  display: flex;
  flex-direction: column;
  top: 2rem;
  width: 100%;
  height: auto;
  align-items: center; }

.footer {
  display: flex;
  width: 100%;
  height: 6rem;
  background: #202020;
  position: fixed;
  bottom: 0;
  left: 0;
  align-items: center;
  justify-content: center;
  margin-top: 6rem; }

.footer-link-git {
  color: #ecebeb;
  font-size: 3rem;
  padding: 1rem;
  transition: all 0.4s ease; }
  .footer-link-git:hover {
    transition: all 0.4s ease;
    transform: rotate(360deg) scale(1.15); }

.footer-link-atrr {
  position: fixed;
  right: 20px;
  bottom: 20px;
  color: #ecebeb;
  font-size: 1.1rem; }

#header {
  color: #ecebeb;
  grid-area: date; }

.temp-current {
  color: #ecebeb;
  grid-area: temp;
  font-size: 2.25rem;
  font-weight: bold;
  justify-self: right; }

.icon {
  color: #ecebeb;
  grid-area: icon;
  justify-self: center;
  align-self: center; }

.weather-descriptor {
  color: #ecebeb;
  grid-area: descriptor;
  padding: 0.75rem;
  font-size: 1.4rem;
  text-align: center; }

.temperature-range {
  color: #ecebeb;
  grid-area: temp-range;
  font-size: 1.3rem;
  font-weight: bold;
  justify-self: center; }

.wind {
  color: #ecebeb;
  grid-area: wind;
  font-size: 1.15rem;
  text-align: center; }

.day-background {
  color: #ecebeb;
  background-color: #202020;
  opacity: 0; }

.weather {
  display: flex;
  width: 90%;
  height: 100%;
  color: white;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap; }
  .weather > div {
    display: grid;
    grid-template-areas: "date date temp" ". icon ." "descriptor descriptor descriptor" "temp-range temp-range temp-range" " . wind .";
    grid-template-columns: 90px 90px 90px;
    grid-template-rows: 80px 100px 100px 60px 60px;
    min-height: 400px;
    max-height: 400px;
    margin: 0.5rem;
    padding: 1.25rem;
    border-right: 3px solid #f7e601; }

.button-cross {
  position: absolute;
  background: rgba(150, 118, 187, 0);
  border: 0px;
  color: #ecebeb;
  font-size: 18px;
  min-width: 5px;
  min-height: 0.25rem;
  right: 2em;
  cursor: pointer; }
  .button-cross:hover {
    transform: scale(1.125); }

